bin/y.output
   0  $accept : programa $end

   1  programa : bloquePrograma

   2  bloquePrograma : bloquePrograma sentenciaDeclarativa
   3                 | bloquePrograma sentenciaEjecutable
   4                 | sentenciaDeclarativa
   5                 | sentenciaEjecutable

   6  sentenciaDeclarativa : tipo listaVariables ';'
   7                       | declaracionProcedimiento
   8                       | error listaVariables ';'

   9  listaVariables : listaVariables ',' identificador
  10                 | identificador

  11  declaracionProcedimiento : encabezadoProc bloqueProc

  12  encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' tipo ',' NS '=' tipo
  13                 | PROC identificador '(' ')' NA '=' tipo ',' NS '=' tipo
  14                 | PROC identificador '(' error ')' NA '=' tipo ',' NS '=' tipo

  15  parametrosProc : parametro
  16                 | parametro ',' parametro
  17                 | parametro ',' parametro ',' parametro

  18  parametro : tipo identificador

  19  bloqueProc : '{' bloque '}'
  20             | '{' error '}'

  21  bloque : bloque sentenciaDeclarativa ';'
  22         | bloque sentenciaEjecutable ';'
  23         | sentenciaDeclarativa ';'
  24         | sentenciaEjecutable ';'

  25  sentenciaEjecutable : asignacion
  26                      | OUT '(' CADENA ')'
  27                      | identificador '(' parametrosProc ')'
  28                      | IF cuerpoIf END_IF
  29                      | cicloFor
  30                      | OUT '(' error ')'
  31                      | IF error END_IF

  32  cicloFor : FOR '(' condicionFor ')' '{' bloqueSentencia '}'

  33  condicionFor : inicioFor ';' condicion ';' incDec

  34  inicioFor : identificador '=' constante

  35  condicion : identificador comparador asignacion
  36            | identificador comparador identificador
  37            | identificador comparador constante

  38  incDec : UP constante
  39         | DOWN constante

  40  bloqueSentencia : bloqueSentencia sentenciaEjecutable
  41                  | sentenciaEjecutable

  42  cuerpoIf : cuerpoCompleto
  43           | cuerpoIncompleto

  44  cuerpoCompleto : '(' condicion ')' '{' bloqueSentencia '}' ELSE '{' bloqueSentencia '}'

  45  cuerpoIncompleto : '(' condicion ')' '{' bloqueSentencia '}' ELSE

  46  asignacion : identificador '=' expresion ';'

  47  expresion : expresion '+' termino
  48            | expresion '-' termino
  49            | termino

  50  termino : termino '*' factor
  51          | termino '/' factor
  52          | factor

  53  factor : constante
  54         | identificador

  55  comparador : "<="
  56             | ">="
  57             | "!="
  58             | "=="

  59  tipo : FLOAT
  60       | INTEGER

  61  identificador : ID

  62  constante : INTEGER

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	.  error

	programa  goto 9
	bloquePrograma  goto 10
	sentenciaDeclarativa  goto 11
	sentenciaEjecutable  goto 12
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	asignacion  goto 17
	cicloFor  goto 18


state 1
	sentenciaDeclarativa : error . listaVariables ';'  (8)

	ID  shift 2
	.  error

	listaVariables  goto 19
	identificador  goto 20


state 2
	identificador : ID .  (61)

	.  reduce 61


state 3
	sentenciaEjecutable : IF . cuerpoIf END_IF  (28)
	sentenciaEjecutable : IF . error END_IF  (31)

	error  shift 21
	'('  shift 22
	.  error

	cuerpoIf  goto 23
	cuerpoCompleto  goto 24
	cuerpoIncompleto  goto 25


state 4
	sentenciaEjecutable : OUT . '(' CADENA ')'  (26)
	sentenciaEjecutable : OUT . '(' error ')'  (30)

	'('  shift 26
	.  error


state 5
	cicloFor : FOR . '(' condicionFor ')' '{' bloqueSentencia '}'  (32)

	'('  shift 27
	.  error


state 6
	tipo : INTEGER .  (60)

	.  reduce 60


state 7
	tipo : FLOAT .  (59)

	.  reduce 59


state 8
	encabezadoProc : PROC . identificador '(' parametrosProc ')' NA '=' tipo ',' NS '=' tipo  (12)
	encabezadoProc : PROC . identificador '(' ')' NA '=' tipo ',' NS '=' tipo  (13)
	encabezadoProc : PROC . identificador '(' error ')' NA '=' tipo ',' NS '=' tipo  (14)

	ID  shift 2
	.  error

	identificador  goto 28


state 9
	$accept : programa . $end  (0)

	$end  accept


state 10
	programa : bloquePrograma .  (1)
	bloquePrograma : bloquePrograma . sentenciaDeclarativa  (2)
	bloquePrograma : bloquePrograma . sentenciaEjecutable  (3)

	error  shift 1
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	$end  reduce 1

	sentenciaDeclarativa  goto 29
	sentenciaEjecutable  goto 30
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	asignacion  goto 17
	cicloFor  goto 18


state 11
	bloquePrograma : sentenciaDeclarativa .  (4)

	.  reduce 4


state 12
	bloquePrograma : sentenciaEjecutable .  (5)

	.  reduce 5


state 13
	sentenciaDeclarativa : tipo . listaVariables ';'  (6)

	ID  shift 2
	.  error

	listaVariables  goto 31
	identificador  goto 20


state 14
	sentenciaDeclarativa : declaracionProcedimiento .  (7)

	.  reduce 7


state 15
	sentenciaEjecutable : identificador . '(' parametrosProc ')'  (27)
	asignacion : identificador . '=' expresion ';'  (46)

	'('  shift 32
	'='  shift 33
	.  error


state 16
	declaracionProcedimiento : encabezadoProc . bloqueProc  (11)

	'{'  shift 34
	.  error

	bloqueProc  goto 35


state 17
	sentenciaEjecutable : asignacion .  (25)

	.  reduce 25


state 18
	sentenciaEjecutable : cicloFor .  (29)

	.  reduce 29


state 19
	sentenciaDeclarativa : error listaVariables . ';'  (8)
	listaVariables : listaVariables . ',' identificador  (9)

	';'  shift 36
	','  shift 37
	.  error


state 20
	listaVariables : identificador .  (10)

	.  reduce 10


state 21
	sentenciaEjecutable : IF error . END_IF  (31)

	END_IF  shift 38
	.  error


state 22
	cuerpoCompleto : '(' . condicion ')' '{' bloqueSentencia '}' ELSE '{' bloqueSentencia '}'  (44)
	cuerpoIncompleto : '(' . condicion ')' '{' bloqueSentencia '}' ELSE  (45)

	ID  shift 2
	.  error

	identificador  goto 39
	condicion  goto 40


state 23
	sentenciaEjecutable : IF cuerpoIf . END_IF  (28)

	END_IF  shift 41
	.  error


state 24
	cuerpoIf : cuerpoCompleto .  (42)

	.  reduce 42


state 25
	cuerpoIf : cuerpoIncompleto .  (43)

	.  reduce 43


state 26
	sentenciaEjecutable : OUT '(' . CADENA ')'  (26)
	sentenciaEjecutable : OUT '(' . error ')'  (30)

	error  shift 42
	CADENA  shift 43
	.  error


state 27
	cicloFor : FOR '(' . condicionFor ')' '{' bloqueSentencia '}'  (32)

	ID  shift 2
	.  error

	identificador  goto 44
	condicionFor  goto 45
	inicioFor  goto 46


state 28
	encabezadoProc : PROC identificador . '(' parametrosProc ')' NA '=' tipo ',' NS '=' tipo  (12)
	encabezadoProc : PROC identificador . '(' ')' NA '=' tipo ',' NS '=' tipo  (13)
	encabezadoProc : PROC identificador . '(' error ')' NA '=' tipo ',' NS '=' tipo  (14)

	'('  shift 47
	.  error


state 29
	bloquePrograma : bloquePrograma sentenciaDeclarativa .  (2)

	.  reduce 2


state 30
	bloquePrograma : bloquePrograma sentenciaEjecutable .  (3)

	.  reduce 3


state 31
	sentenciaDeclarativa : tipo listaVariables . ';'  (6)
	listaVariables : listaVariables . ',' identificador  (9)

	';'  shift 48
	','  shift 37
	.  error


state 32
	sentenciaEjecutable : identificador '(' . parametrosProc ')'  (27)

	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 49
	parametrosProc  goto 50
	parametro  goto 51


state 33
	asignacion : identificador '=' . expresion ';'  (46)

	ID  shift 2
	INTEGER  shift 52
	.  error

	identificador  goto 53
	constante  goto 54
	expresion  goto 55
	termino  goto 56
	factor  goto 57


state 34
	bloqueProc : '{' . bloque '}'  (19)
	bloqueProc : '{' . error '}'  (20)

	error  shift 58
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	.  error

	sentenciaDeclarativa  goto 59
	sentenciaEjecutable  goto 60
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	bloque  goto 61
	asignacion  goto 17
	cicloFor  goto 18


state 35
	declaracionProcedimiento : encabezadoProc bloqueProc .  (11)

	.  reduce 11


state 36
	sentenciaDeclarativa : error listaVariables ';' .  (8)

	.  reduce 8


state 37
	listaVariables : listaVariables ',' . identificador  (9)

	ID  shift 2
	.  error

	identificador  goto 62


state 38
	sentenciaEjecutable : IF error END_IF .  (31)

	.  reduce 31


state 39
	condicion : identificador . comparador asignacion  (35)
	condicion : identificador . comparador identificador  (36)
	condicion : identificador . comparador constante  (37)

	"<="  shift 63
	">="  shift 64
	"!="  shift 65
	"=="  shift 66
	.  error

	comparador  goto 67


state 40
	cuerpoCompleto : '(' condicion . ')' '{' bloqueSentencia '}' ELSE '{' bloqueSentencia '}'  (44)
	cuerpoIncompleto : '(' condicion . ')' '{' bloqueSentencia '}' ELSE  (45)

	')'  shift 68
	.  error


state 41
	sentenciaEjecutable : IF cuerpoIf END_IF .  (28)

	.  reduce 28


state 42
	sentenciaEjecutable : OUT '(' error . ')'  (30)

	')'  shift 69
	.  error


state 43
	sentenciaEjecutable : OUT '(' CADENA . ')'  (26)

	')'  shift 70
	.  error


state 44
	inicioFor : identificador . '=' constante  (34)

	'='  shift 71
	.  error


state 45
	cicloFor : FOR '(' condicionFor . ')' '{' bloqueSentencia '}'  (32)

	')'  shift 72
	.  error


state 46
	condicionFor : inicioFor . ';' condicion ';' incDec  (33)

	';'  shift 73
	.  error


state 47
	encabezadoProc : PROC identificador '(' . parametrosProc ')' NA '=' tipo ',' NS '=' tipo  (12)
	encabezadoProc : PROC identificador '(' . ')' NA '=' tipo ',' NS '=' tipo  (13)
	encabezadoProc : PROC identificador '(' . error ')' NA '=' tipo ',' NS '=' tipo  (14)

	error  shift 74
	INTEGER  shift 6
	FLOAT  shift 7
	')'  shift 75
	.  error

	tipo  goto 49
	parametrosProc  goto 76
	parametro  goto 51


state 48
	sentenciaDeclarativa : tipo listaVariables ';' .  (6)

	.  reduce 6


state 49
	parametro : tipo . identificador  (18)

	ID  shift 2
	.  error

	identificador  goto 77


state 50
	sentenciaEjecutable : identificador '(' parametrosProc . ')'  (27)

	')'  shift 78
	.  error


state 51
	parametrosProc : parametro .  (15)
	parametrosProc : parametro . ',' parametro  (16)
	parametrosProc : parametro . ',' parametro ',' parametro  (17)

	','  shift 79
	')'  reduce 15


state 52
	constante : INTEGER .  (62)

	.  reduce 62


state 53
	factor : identificador .  (54)

	.  reduce 54


state 54
	factor : constante .  (53)

	.  reduce 53


state 55
	asignacion : identificador '=' expresion . ';'  (46)
	expresion : expresion . '+' termino  (47)
	expresion : expresion . '-' termino  (48)

	'+'  shift 80
	'-'  shift 81
	';'  shift 82
	.  error


state 56
	expresion : termino .  (49)
	termino : termino . '*' factor  (50)
	termino : termino . '/' factor  (51)

	'*'  shift 83
	'/'  shift 84
	'+'  reduce 49
	'-'  reduce 49
	';'  reduce 49


state 57
	termino : factor .  (52)

	.  reduce 52


state 58
	sentenciaDeclarativa : error . listaVariables ';'  (8)
	bloqueProc : '{' error . '}'  (20)

	ID  shift 2
	'}'  shift 85
	.  error

	listaVariables  goto 19
	identificador  goto 20


state 59
	bloque : sentenciaDeclarativa . ';'  (23)

	';'  shift 86
	.  error


state 60
	bloque : sentenciaEjecutable . ';'  (24)

	';'  shift 87
	.  error


state 61
	bloqueProc : '{' bloque . '}'  (19)
	bloque : bloque . sentenciaDeclarativa ';'  (21)
	bloque : bloque . sentenciaEjecutable ';'  (22)

	error  shift 1
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	'}'  shift 88
	.  error

	sentenciaDeclarativa  goto 89
	sentenciaEjecutable  goto 90
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	asignacion  goto 17
	cicloFor  goto 18


state 62
	listaVariables : listaVariables ',' identificador .  (9)

	.  reduce 9


state 63
	comparador : "<=" .  (55)

	.  reduce 55


state 64
	comparador : ">=" .  (56)

	.  reduce 56


state 65
	comparador : "!=" .  (57)

	.  reduce 57


state 66
	comparador : "==" .  (58)

	.  reduce 58


state 67
	condicion : identificador comparador . asignacion  (35)
	condicion : identificador comparador . identificador  (36)
	condicion : identificador comparador . constante  (37)

	ID  shift 2
	INTEGER  shift 52
	.  error

	identificador  goto 91
	asignacion  goto 92
	constante  goto 93


state 68
	cuerpoCompleto : '(' condicion ')' . '{' bloqueSentencia '}' ELSE '{' bloqueSentencia '}'  (44)
	cuerpoIncompleto : '(' condicion ')' . '{' bloqueSentencia '}' ELSE  (45)

	'{'  shift 94
	.  error


state 69
	sentenciaEjecutable : OUT '(' error ')' .  (30)

	.  reduce 30


state 70
	sentenciaEjecutable : OUT '(' CADENA ')' .  (26)

	.  reduce 26


state 71
	inicioFor : identificador '=' . constante  (34)

	INTEGER  shift 52
	.  error

	constante  goto 95


state 72
	cicloFor : FOR '(' condicionFor ')' . '{' bloqueSentencia '}'  (32)

	'{'  shift 96
	.  error


state 73
	condicionFor : inicioFor ';' . condicion ';' incDec  (33)

	ID  shift 2
	.  error

	identificador  goto 39
	condicion  goto 97


state 74
	encabezadoProc : PROC identificador '(' error . ')' NA '=' tipo ',' NS '=' tipo  (14)

	')'  shift 98
	.  error


state 75
	encabezadoProc : PROC identificador '(' ')' . NA '=' tipo ',' NS '=' tipo  (13)

	NA  shift 99
	.  error


state 76
	encabezadoProc : PROC identificador '(' parametrosProc . ')' NA '=' tipo ',' NS '=' tipo  (12)

	')'  shift 100
	.  error


state 77
	parametro : tipo identificador .  (18)

	.  reduce 18


state 78
	sentenciaEjecutable : identificador '(' parametrosProc ')' .  (27)

	.  reduce 27


state 79
	parametrosProc : parametro ',' . parametro  (16)
	parametrosProc : parametro ',' . parametro ',' parametro  (17)

	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 49
	parametro  goto 101


state 80
	expresion : expresion '+' . termino  (47)

	ID  shift 2
	INTEGER  shift 52
	.  error

	identificador  goto 53
	constante  goto 54
	termino  goto 102
	factor  goto 57


state 81
	expresion : expresion '-' . termino  (48)

	ID  shift 2
	INTEGER  shift 52
	.  error

	identificador  goto 53
	constante  goto 54
	termino  goto 103
	factor  goto 57


state 82
	asignacion : identificador '=' expresion ';' .  (46)

	.  reduce 46


state 83
	termino : termino '*' . factor  (50)

	ID  shift 2
	INTEGER  shift 52
	.  error

	identificador  goto 53
	constante  goto 54
	factor  goto 104


state 84
	termino : termino '/' . factor  (51)

	ID  shift 2
	INTEGER  shift 52
	.  error

	identificador  goto 53
	constante  goto 54
	factor  goto 105


state 85
	bloqueProc : '{' error '}' .  (20)

	.  reduce 20


state 86
	bloque : sentenciaDeclarativa ';' .  (23)

	.  reduce 23


state 87
	bloque : sentenciaEjecutable ';' .  (24)

	.  reduce 24


state 88
	bloqueProc : '{' bloque '}' .  (19)

	.  reduce 19


state 89
	bloque : bloque sentenciaDeclarativa . ';'  (21)

	';'  shift 106
	.  error


state 90
	bloque : bloque sentenciaEjecutable . ';'  (22)

	';'  shift 107
	.  error


state 91
	condicion : identificador comparador identificador .  (36)
	asignacion : identificador . '=' expresion ';'  (46)

	'='  shift 33
	';'  reduce 36
	')'  reduce 36


state 92
	condicion : identificador comparador asignacion .  (35)

	.  reduce 35


state 93
	condicion : identificador comparador constante .  (37)

	.  reduce 37


state 94
	cuerpoCompleto : '(' condicion ')' '{' . bloqueSentencia '}' ELSE '{' bloqueSentencia '}'  (44)
	cuerpoIncompleto : '(' condicion ')' '{' . bloqueSentencia '}' ELSE  (45)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	.  error

	sentenciaEjecutable  goto 108
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	bloqueSentencia  goto 109


state 95
	inicioFor : identificador '=' constante .  (34)

	.  reduce 34


state 96
	cicloFor : FOR '(' condicionFor ')' '{' . bloqueSentencia '}'  (32)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	.  error

	sentenciaEjecutable  goto 108
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	bloqueSentencia  goto 110


state 97
	condicionFor : inicioFor ';' condicion . ';' incDec  (33)

	';'  shift 111
	.  error


state 98
	encabezadoProc : PROC identificador '(' error ')' . NA '=' tipo ',' NS '=' tipo  (14)

	NA  shift 112
	.  error


state 99
	encabezadoProc : PROC identificador '(' ')' NA . '=' tipo ',' NS '=' tipo  (13)

	'='  shift 113
	.  error


state 100
	encabezadoProc : PROC identificador '(' parametrosProc ')' . NA '=' tipo ',' NS '=' tipo  (12)

	NA  shift 114
	.  error


state 101
	parametrosProc : parametro ',' parametro .  (16)
	parametrosProc : parametro ',' parametro . ',' parametro  (17)

	','  shift 115
	')'  reduce 16


state 102
	expresion : expresion '+' termino .  (47)
	termino : termino . '*' factor  (50)
	termino : termino . '/' factor  (51)

	'*'  shift 83
	'/'  shift 84
	'+'  reduce 47
	'-'  reduce 47
	';'  reduce 47


state 103
	expresion : expresion '-' termino .  (48)
	termino : termino . '*' factor  (50)
	termino : termino . '/' factor  (51)

	'*'  shift 83
	'/'  shift 84
	'+'  reduce 48
	'-'  reduce 48
	';'  reduce 48


state 104
	termino : termino '*' factor .  (50)

	.  reduce 50


state 105
	termino : termino '/' factor .  (51)

	.  reduce 51


state 106
	bloque : bloque sentenciaDeclarativa ';' .  (21)

	.  reduce 21


state 107
	bloque : bloque sentenciaEjecutable ';' .  (22)

	.  reduce 22


state 108
	bloqueSentencia : sentenciaEjecutable .  (41)

	.  reduce 41


state 109
	bloqueSentencia : bloqueSentencia . sentenciaEjecutable  (40)
	cuerpoCompleto : '(' condicion ')' '{' bloqueSentencia . '}' ELSE '{' bloqueSentencia '}'  (44)
	cuerpoIncompleto : '(' condicion ')' '{' bloqueSentencia . '}' ELSE  (45)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'}'  shift 116
	.  error

	sentenciaEjecutable  goto 117
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18


state 110
	cicloFor : FOR '(' condicionFor ')' '{' bloqueSentencia . '}'  (32)
	bloqueSentencia : bloqueSentencia . sentenciaEjecutable  (40)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'}'  shift 118
	.  error

	sentenciaEjecutable  goto 117
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18


state 111
	condicionFor : inicioFor ';' condicion ';' . incDec  (33)

	UP  shift 119
	DOWN  shift 120
	.  error

	incDec  goto 121


state 112
	encabezadoProc : PROC identificador '(' error ')' NA . '=' tipo ',' NS '=' tipo  (14)

	'='  shift 122
	.  error


state 113
	encabezadoProc : PROC identificador '(' ')' NA '=' . tipo ',' NS '=' tipo  (13)

	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 123


state 114
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA . '=' tipo ',' NS '=' tipo  (12)

	'='  shift 124
	.  error


state 115
	parametrosProc : parametro ',' parametro ',' . parametro  (17)

	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 49
	parametro  goto 125


state 116
	cuerpoCompleto : '(' condicion ')' '{' bloqueSentencia '}' . ELSE '{' bloqueSentencia '}'  (44)
	cuerpoIncompleto : '(' condicion ')' '{' bloqueSentencia '}' . ELSE  (45)

	ELSE  shift 126
	.  error


state 117
	bloqueSentencia : bloqueSentencia sentenciaEjecutable .  (40)

	.  reduce 40


state 118
	cicloFor : FOR '(' condicionFor ')' '{' bloqueSentencia '}' .  (32)

	.  reduce 32


state 119
	incDec : UP . constante  (38)

	INTEGER  shift 52
	.  error

	constante  goto 127


state 120
	incDec : DOWN . constante  (39)

	INTEGER  shift 52
	.  error

	constante  goto 128


state 121
	condicionFor : inicioFor ';' condicion ';' incDec .  (33)

	.  reduce 33


state 122
	encabezadoProc : PROC identificador '(' error ')' NA '=' . tipo ',' NS '=' tipo  (14)

	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 129


state 123
	encabezadoProc : PROC identificador '(' ')' NA '=' tipo . ',' NS '=' tipo  (13)

	','  shift 130
	.  error


state 124
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' . tipo ',' NS '=' tipo  (12)

	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 131


state 125
	parametrosProc : parametro ',' parametro ',' parametro .  (17)

	.  reduce 17


state 126
	cuerpoCompleto : '(' condicion ')' '{' bloqueSentencia '}' ELSE . '{' bloqueSentencia '}'  (44)
	cuerpoIncompleto : '(' condicion ')' '{' bloqueSentencia '}' ELSE .  (45)

	'{'  shift 132
	END_IF  reduce 45


state 127
	incDec : UP constante .  (38)

	.  reduce 38


state 128
	incDec : DOWN constante .  (39)

	.  reduce 39


state 129
	encabezadoProc : PROC identificador '(' error ')' NA '=' tipo . ',' NS '=' tipo  (14)

	','  shift 133
	.  error


state 130
	encabezadoProc : PROC identificador '(' ')' NA '=' tipo ',' . NS '=' tipo  (13)

	NS  shift 134
	.  error


state 131
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' tipo . ',' NS '=' tipo  (12)

	','  shift 135
	.  error


state 132
	cuerpoCompleto : '(' condicion ')' '{' bloqueSentencia '}' ELSE '{' . bloqueSentencia '}'  (44)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	.  error

	sentenciaEjecutable  goto 108
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	bloqueSentencia  goto 136


state 133
	encabezadoProc : PROC identificador '(' error ')' NA '=' tipo ',' . NS '=' tipo  (14)

	NS  shift 137
	.  error


state 134
	encabezadoProc : PROC identificador '(' ')' NA '=' tipo ',' NS . '=' tipo  (13)

	'='  shift 138
	.  error


state 135
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' tipo ',' . NS '=' tipo  (12)

	NS  shift 139
	.  error


state 136
	bloqueSentencia : bloqueSentencia . sentenciaEjecutable  (40)
	cuerpoCompleto : '(' condicion ')' '{' bloqueSentencia '}' ELSE '{' bloqueSentencia . '}'  (44)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'}'  shift 140
	.  error

	sentenciaEjecutable  goto 117
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18


state 137
	encabezadoProc : PROC identificador '(' error ')' NA '=' tipo ',' NS . '=' tipo  (14)

	'='  shift 141
	.  error


state 138
	encabezadoProc : PROC identificador '(' ')' NA '=' tipo ',' NS '=' . tipo  (13)

	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 142


state 139
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' tipo ',' NS . '=' tipo  (12)

	'='  shift 143
	.  error


state 140
	cuerpoCompleto : '(' condicion ')' '{' bloqueSentencia '}' ELSE '{' bloqueSentencia '}' .  (44)

	.  reduce 44


state 141
	encabezadoProc : PROC identificador '(' error ')' NA '=' tipo ',' NS '=' . tipo  (14)

	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 144


state 142
	encabezadoProc : PROC identificador '(' ')' NA '=' tipo ',' NS '=' tipo .  (13)

	.  reduce 13


state 143
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' tipo ',' NS '=' . tipo  (12)

	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 145


state 144
	encabezadoProc : PROC identificador '(' error ')' NA '=' tipo ',' NS '=' tipo .  (14)

	.  reduce 14


state 145
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' tipo ',' NS '=' tipo .  (12)

	.  reduce 12


34 terminals, 29 nonterminals
63 grammar rules, 146 states
